# mcp-partner.github.io

./: .gitignore  App.tsx  README.md  README_en.md  README_zh.md  constants.ts  index.css  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
.github/workflows/: main.yml
api/: cors.ts
components/: AboutModal.tsx  ConnectionBar.tsx  LogViewer.tsx  RequestPanel.tsx  Sidebar.tsx
public/: docs.html
services/: mcpClient.ts  sseMcpClient.ts  streamableHttpMcpClient.ts
src-tauri/: Cargo.toml  tauri.conf.json
utils/: i18n.ts  openUrl.ts
